Ajout du menu de navigation

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <h1>Bienvenue</h1>
+    <h4>Menu</h4>
+    <ul>
+      <li><a href="index.html">À propos</a></li>
+      <li><a href="a-propos.html">A pr</a></li>
+      <li><a href="contact.html"></a>contact</li>
+      <li><a href="produits.html">Produits</a></li>
+    </ul>
   </body>
 </html>
