Ajout du menu de navigation dans tous les pages

--- a/a-propos.html
+++ b/a-propos.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>A propos</h1>
+    <ul>
+      <li><a href="index.html">À propos</a></li>
+      <li><a href="a-propos.html">A pr</a></li>
+      <li><a href="contact.html"></a>contact</li>
+      <li><a href="produits.html">Produits</a></li>
+    </ul>
   </body>
 </html>
