--- a/produits.html
+++ b/produits.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Produits</title>
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li><a href="index.html">À propos</a></li>
+      <li><a href="a-propos.html">A pr</a></li>
+      <li><a href="contact.html"></a>contact</li>
+      <li><a href="produits.html">Produits</a></li>
+    </ul>
+  </body>
 </html>
