--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Bienvenue</h1>
     <h4>Menu</h4>
+    <!--Ceci est un commentaire-->
     <ul>
       <li><a href="index.html">À propos</a></li>
       <li><a href="a-propos.html">A pr</a></li>
