--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Contact</h1>
+    <!--Gab menerve-->
     <ul>
       <li><a href="index.html">À propos</a></li>
       <li><a href="a-propos.html">A pr</a></li>
