--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,11 @@
   <body>
     <h1>Contact</h1>
     <!--Gab menerve-->
+    <h4>Menu</h4>
     <ul>
       <li><a href="index.html">À propos</a></li>
-      <li><a href="a-propos.html">A pr</a></li>
-      <li><a href="contact.html"></a>contact</li>
+      <li><a href="a-propos.html">A propos</a></li>
+      <li><a href="contact.html">contact</a></li>
       <li><a href="produits.html">Produits</a></li>
     </ul>
   </body>
