--- a/gitlens.html
+++ b/gitlens.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>GitLens</h1>
+    <h4>Ajout pour commit</h4>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit asperiores
       maxime repudiandae voluptatem iste doloremque. Sapiente dolores aut veniam
